// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runs Axe on TextField (TextFieldBasicExample) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField8\\" required=\\"\\" value=\\"\\" class=\\"ms-TextField-field field-6\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField8",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Form element does not have an implicit (wrapped) &lt;label>
- Form element does not have an explicit &lt;label>
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Form element does not have an implicit (wrapped) <label>. Form element does not have an explicit <label>. Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField8",
      "ruleId": "label",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "label",
  },
]
`;

exports[`runs Axe on TextField (TextFieldBorderlessExample) 1`] = `Array []`;

exports[`runs Axe on TextField (TextFieldControlledExample) 1`] = `Array []`;

exports[`runs Axe on TextField (TextFieldCustomRenderExample) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField2\\" value=\\"\\" class=\\"ms-TextField-field field-4\\" aria-describedby=\\"TextFieldDescription3\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField2",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- Only title used to generate label for form element",
      "text": "Fix all of the following: Only title used to generate label for form element.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField2",
      "ruleId": "label-title-only",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "label-title-only",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField2\\" value=\\"\\" class=\\"ms-TextField-field field-4\\" aria-describedby=\\"TextFieldDescription3\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField2",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Form element does not have an implicit (wrapped) &lt;label>
- Form element does not have an explicit &lt;label>
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Form element does not have an implicit (wrapped) <label>. Form element does not have an explicit <label>. Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField2",
      "ruleId": "label",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "label",
  },
]
`;

exports[`runs Axe on TextField (TextFieldErrorMessageExample) 1`] = `Array []`;

exports[`runs Axe on TextField (TextFieldMultilineExample) 1`] = `Array []`;

exports[`runs Axe on TextField (TextFieldPrefixAndSuffixExample) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<span style=\\"padding-bottom:1px\\">https://</span>",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".prefix-15 > span",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has insufficient color contrast of 2.21 (foreground color: #a6a6a6, background color: #f4f4f4, font size: 10.5pt, font weight: normal). Expected contrast ratio of 4.5:1",
      "text": "Fix any of the following: Element has insufficient color contrast of 2.21 (foreground color: #a6a6a6, background color: #f4f4f4, font size: 10.5pt, font weight: normal). Expected contrast ratio of 4.5:1.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".prefix-15 > span",
      "ruleId": "color-contrast",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "color-contrast",
  },
]
`;

exports[`runs Axe on TextField (TextFieldStyledExample) 1`] = `Array []`;
